--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^6.2.1
   http: ^1.3.0
+  shared_preferences: ^2.5.1
 
 dev_dependencies:
   flutter_test:
