--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   google_fonts: ^6.2.1
   http: ^1.3.0
   shared_preferences: ^2.5.1
+  pluto_grid: ^8.0.0
+  url_launcher: ^6.3.1
+  url_launcher_windows: ^3.1.4
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +68,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - images/blubuk_logo.png
+     - images/blubuk 2.0.png
      - images/bubble.png
      - images/first_pattern.png
      - images/icon_back.png
