--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   pluto_grid: ^8.0.0
   url_launcher: ^6.3.1
   url_launcher_windows: ^3.1.4
+  dropdown_search: ^6.0.2
 
 dev_dependencies:
   flutter_test:
