--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   url_launcher: ^6.3.1
   url_launcher_windows: ^3.1.4
   dropdown_search: ^6.0.2
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
